[gd_scene load_steps=11 format=2]

[ext_resource path="res://models/revolverB.tscn" type="PackedScene" id=1]
[ext_resource path="res://models/revolverA.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/weapons/scripts/revolver.gd" type="Script" id=3]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
width = 128
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
direction = Vector3( 0, 0, -1 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
initial_velocity_random = 0.5
scale_curve = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
albedo_color = Color( 0.917647, 0.905882, 0.129412, 1 )

[sub_resource type="CubeMesh" id=5]
material = SubResource( 4 )
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="SphereMesh" id=7]
radius = 0.1
height = 0.2

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("model/revolverA:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Transform( 0, 1, -8.9407e-08, 2.08616e-07, -1.19209e-07, -1, -1, 0, -2.38419e-07, -0.027, -0.027, 0.016 ), Transform( 0, 1, -8.9407e-08, 1, 5.21079e-15, 2.8213e-07, 2.52327e-07, -1.19209e-07, -1, -0.027, -0.027, 0.016 ), Transform( 0, 1, -8.9407e-08, -2.96039e-07, 1.19209e-07, 1, 1, 1.04216e-14, 3.25842e-07, -0.027, -0.027, 0.016 ), Transform( 0, 1, -8.9407e-08, -1, -1.56324e-14, -3.69553e-07, -3.3975e-07, 1.19209e-07, 1, -0.027, -0.027, 0.016 ), Transform( 0, 1, -8.9407e-08, 3.83462e-07, -1.19209e-07, -1, -1, -2.08432e-14, -4.13265e-07, -0.027, -0.027, 0.016 ) ]
}

[node name="revolver" type="Spatial"]
script = ExtResource( 3 )

[node name="shoot_here" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.024, -0.635 )

[node name="Particles" type="Particles" parent="shoot_here"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.164673, 0 )
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
explosiveness = 1.0
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="projectile_pos" type="Spatial" parent="shoot_here"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.34295 )

[node name="MeshInstance" type="MeshInstance" parent="shoot_here/projectile_pos"]
visible = false
mesh = SubResource( 7 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/reload = SubResource( 6 )

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="model" type="Spatial" parent="."]

[node name="revolverA" parent="model" instance=ExtResource( 2 )]
transform = Transform( -1.19209e-07, 1, -5.96046e-08, 1.78814e-07, -1.19209e-07, -1, -1, -5.96046e-08, -2.38419e-07, -0.027, -0.027, 0.016 )

[node name="Spatial" type="Spatial" parent="model/revolverA"]
transform = Transform( 1, 4.37114e-08, -6.3574e-08, -4.37114e-08, 1, 4.56955e-08, 3.37706e-08, -7.54976e-08, 1, -5.58794e-09, 0.0261812, 0.067434 )

[node name="revolverB" parent="model/revolverA/Spatial" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 1.07462e-15, 0, 1.07463e-15, 1, 0.337711, -0.0521829, -0.023219 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
